# hunter

cmake/configs/: default.cmake
cmake/projects/GLM/: hunter.cmake
cmake/projects/date/: hunter.cmake
cmake/projects/sqlpp11/: hunter.cmake
examples/date/: CMakeLists.txt  foo.cpp
